Calibration for camera and front wheels servo setup

--- a/RobotApp/CMakeLists.txt
+++ b/RobotApp/CMakeLists.txt
@@ -34,6 +34,7 @@ include_directories(${pybind11_INCLUDE_DIR})
 # Set variable **************************************************************************************************
 SET(SOURCES
   ${CMAKE_CURRENT_DIR}RobotApp.cpp
+  ${CMAKE_CURRENT_DIR}Config.cpp
   ${CMAKE_CURRENT_DIR}Stream.cpp
   ${CMAKE_CURRENT_DIR}PCA9685.cpp
   ${CMAKE_CURRENT_DIR}Servo.cpp
